--- a/stable/traefik/templates/configmap.yaml
+++ b/stable/traefik/templates/configmap.yaml
@@ -68,6 +68,9 @@ data:
     storage = "/acme/acme.json"
     entryPoint = "https"
     onHostRule = true
+    {{- if .Values.acme.dnsProvider }}
+    dnsProvider = "{{ .Values.acme.dnsProvider }}"
+    {{- end }}
     {{- if .Values.acme.staging }}
     caServer = "https://acme-staging.api.letsencrypt.org/directory"
     {{- end }}
