--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -34,6 +34,8 @@ acme:
   email: admin@example.com
   staging: true
   logging: false
+  ## Set dnsProvider to perform domain verification using dns challenge
+  # dnsProvider: nil
   ## Save ACME certs to a persistent volume. WARNING: If you do not do this, you will re-request
   ## certs every time a pod (re-)starts and you WILL be rate limited!
   persistence:
