--- a/stable/traefik/templates/deployment.yaml
+++ b/stable/traefik/templates/deployment.yaml
@@ -63,7 +63,7 @@ spec:
         {{- if .Values.env }}
         env:
 {{ toYaml .Values.env | indent 8 }}
-        {{- end -}}
+        {{- end }}
         volumeMounts:
         - mountPath: /config
           name: config
