--- a/stable/weave-scope/Chart.yaml
+++ b/stable/weave-scope/Chart.yaml
@@ -1,5 +1,5 @@
 name: weave-scope
-version: 0.2.0
+version: 0.9.0
 appVersion: 1.6.2
 description: A Helm chart for the Weave Scope cluster visualizer.
 keywords:
@@ -10,6 +10,6 @@ home: https://www.weave.works/oss/scope/
 sources:
   - https://github.com/weaveworks/scope
 maintainers:
-  - name: Joe Thompson
-    email: jthompson@oteemo.com
+  - name: omkensey
+    email: github@orion-com.com
 icon: https://avatars1.githubusercontent.com/u/9976052?s=64
