--- a/stable/weave-scope/charts/weave-scope-frontend/Chart.yaml
+++ b/stable/weave-scope/charts/weave-scope-frontend/Chart.yaml
@@ -1,4 +1,14 @@
-apiVersion: v1
 description: A Helm chart for the Weave Scope cluster visualizer frontend.
 name: weave-scope-frontend
-version: 0.2.0
+version: 0.9.0
+keywords:
+  - containers
+  - dashboard
+  - monitoring
+home: https://www.weave.works/oss/scope/
+sources:
+  - https://github.com/weaveworks/scope
+maintainers:
+  - name: omkensey
+    email: github@orion-com.com
+icon: https://avatars1.githubusercontent.com/u/9976052?s=64
