--- a/stable/datadog/templates/serviceaccount.yaml
+++ b/stable/datadog/templates/serviceaccount.yaml
@@ -1,4 +1,5 @@
-{{- if .Values.rbac.create -}}
+# You need to use that account for your dd-agent DaemonSet
+{{- if .Values.rbac.create - }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
