[stable/coredns] Add RBAC support
This is needed in case of kubernetes' middleware being used.

Access rules are based on:
https://raw.githubusercontent.com/coredns/deployment/master/kubernetes/coredns-1.6.yaml.sed

--- a/stable/coredns/templates/deployment.yaml
+++ b/stable/coredns/templates/deployment.yaml
@@ -37,6 +37,13 @@ spec:
         scheduler.alpha.kubernetes.io/tolerations: '[{"key":"CriticalAddonsOnly", "operator":"Exists"}]'
         {{- end }}
     spec:
+      {{- if .Values.middleware.kubernetes.enabled }}
+      {{- if .Values.rbac.enabled }}
+      serviceAccountName: {{ template "coredns.fullname" . }}
+      {{- else }}
+      serviceAccountName: default
+      {{- end }}
+      {{- end }}
       {{- if .Values.isClusterService }}
       dnsPolicy: Default
       {{- end }}
