--- a/incubator/neo4j/templates/core-statefulset.yaml
+++ b/incubator/neo4j/templates/core-statefulset.yaml
@@ -23,20 +23,34 @@ spec:
             value: CORE
           - name: NUMBER_OF_CORES
             value: "{{ .Values.core.numberOfServers }}"
-          - name: NEO4J_dbms_security_auth__enabled
-            value: "false"
+          - name: AUTH_ENABLED
+            value: "{{ .Values.authEnabled }}"
           - name: NEO4J_causal__clustering_discovery__type
             value: DNS
           - name: NEO4J_causal__clustering_initial__discovery__members
             value: "{{ template "neo4j.fullname" . }}.default.svc.cluster.local:5000"
+          {{- if .Values.authEnabled }}
+          - name: NEO4J_SECRETS_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: {{ template "neo4j.secrets.fullname" . }}
+                key: neo4j-password
+          {{- end }}
         command:
           - "/bin/bash"
-          - "-ecx"
+          - "-c"
           - |
             export NEO4J_dbms_connectors_default__advertised__address=$(hostname -f)
             export NEO4J_causal__clustering_discovery__advertised__address=$(hostname -f):5000
             export NEO4J_causal__clustering_transaction__advertised__address=$(hostname -f):6000
             export NEO4J_causal__clustering_raft__advertised__address=$(hostname -f):7000
+
+            if [ "${AUTH_ENABLED:-}" == "true" ]; then
+              export NEO4J_AUTH="neo4j/${NEO4J_SECRETS_PASSWORD}"
+            else
+              export NEO4J_AUTH="none"
+            fi
+
             exec /docker-entrypoint.sh "neo4j"
         ports:
         - containerPort: 5000
