--- a/stable/rabbitmq/values.yaml
+++ b/stable/rabbitmq/values.yaml
@@ -58,7 +58,7 @@ rabbitmqManagerPort: 15672
 ## ref: https://github.com/bitnami/bitnami-docker-rabbitmq#environment-variables
 ## ref: https://www.rabbitmq.com/disk-alarms.html
 ##
-rabbitmqDiskFreeLimit: '"8Gi"'
+rabbitmqDiskFreeLimit: '"8GiB"'
 
 ## Kubernetes service type
 serviceType: ClusterIP
