--- a/stable/prometheus-to-sd/Chart.yaml
+++ b/stable/prometheus-to-sd/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
-description: A Helm chart for Kubernetes
+description: Scrape metrics stored in prometheus format and push them to the Stackdriver
 name: prometheus-to-sd
 version: 0.1.0
