[stable/consul] Ingress for Consul UI
This introduces an optional ingress record for Consul UI.

--- a/stable/consul/values.yaml
+++ b/stable/consul/values.yaml
@@ -68,6 +68,13 @@ uiService:
   enabled: true
   type: "NodePort"
 
+## Create an Ingress for the Web UI
+uiIngress:
+  enabled: false
+  annotations: {}
+  hosts: []
+  tls: {}
+
 ## test container details
 test:
   image: lachlanevenson/k8s-kubectl
