--- a/stable/coredns/templates/deployment.yaml
+++ b/stable/coredns/templates/deployment.yaml
@@ -38,11 +38,7 @@ spec:
         {{- end }}
     spec:
       {{- if .Values.middleware.kubernetes.enabled }}
-      {{- if .Values.rbac.enabled }}
-      serviceAccountName: {{ template "coredns.fullname" . }}
-      {{- else }}
-      serviceAccountName: default
-      {{- end }}
+      serviceAccountName: {{ if .Values.rbac.create }}{{ template "coredns.fullname" . }}{{ else }}"{{ .Values.rbac.serviceAccountName }}"{{ end }}
       {{- end }}
       {{- if .Values.isClusterService }}
       dnsPolicy: Default
