--- a/stable/coredns/templates/rbac.yaml
+++ b/stable/coredns/templates/rbac.yaml
@@ -1,4 +1,4 @@
-{{- if (.Values.middleware.kubernetes.enabled) and (.Values.rbac.enabled) }}
+{{- if (.Values.middleware.kubernetes.enabled) and (.Values.rbac.create) }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
