Add Better ServiceType support to MariaDB
This commit adds logic to better support the NodePort and LoadBalancer
service types. Annotations can be used by the LoadBalancer service to
make the load balancer internal only. The nodePort parameter can be used
to specify the exact port that NodePort (and LoadBalancer) uses.

--- a/stable/mariadb/values.yaml
+++ b/stable/mariadb/values.yaml
@@ -31,8 +31,20 @@ usePassword: true
 # mariadbDatabase:
 
 
-## Kubernetes service type
-serviceType: ClusterIP
+service:
+  ## Kubernetes service type
+  type: ClusterIP
+
+  ## Specify the nodePort value for the LoadBalancer and NodePort service types.
+  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
+  ##
+  # nodePort:
+
+  ## Provide any additonal annotations which may be required. This can be used to
+  ## set the LoadBalancer service type to internal only.
+  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#internal-load-balancer
+  ##
+  # annotations:
 
 ## Enable persistence using Persistent Volume Claims
 ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
