[stable/kubernetes-dashboard] Make chart more standardized
The charts ecosystem seems to be converging on some standards, which
seems to be driven by the patterns laid out in `helm create`. This makes
the following breaking changes to this crate:

* move the image definition into a map
* move the service definition into a map
* rename httpPort to externalPort
* reordered files to match the `helm create` order
* Made sure chart names don't contain '+'

Finally this bumps the version from 0.4 to 0.5 since this is not
backwards compatible.

--- a/stable/kubernetes-dashboard/templates/rolebinding.yaml
+++ b/stable/kubernetes-dashboard/templates/rolebinding.yaml
@@ -4,7 +4,7 @@ kind: ClusterRoleBinding
 metadata:
   labels:
     app: {{ template "kubernetes-dashboard.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "kubernetes-dashboard.fullname" . }}
