--- a/stable/kubernetes-dashboard/values.yaml
+++ b/stable/kubernetes-dashboard/values.yaml
@@ -3,16 +3,23 @@
 # Declare name/value pairs to be passed into your templates.
 # name: value
 
-image: k8s.gcr.io/kubernetes-dashboard-amd64
-imageTag: "v1.7.1"
-imagePullPolicy: "IfNotPresent"
+image:
+  repository: k8s.gcr.io/kubernetes-dashboard-amd64
+  tag: v1.8.1
+  pullPolicy: IfNotPresent
 
+## Node labels for pod assignment
+## Ref: https://kubernetes.io/docs/user-guide/node-selection/
+##
 nodeSelector: {}
 
-httpPort: 80
+service:
+  type: ClusterIP
+  externalPort: 80
 
-serviceType: ClusterIP
-serviceAnnotations: {}
+  ## Kubernetes Dashboard Service annotations
+  ##
+  annotations: {}
   # foo.io/bar: "true"
 
 resources:
