--- a/incubator/neo4j/templates/secrets.yml
+++ b/incubator/neo4j/templates/secrets.yml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: app: {{ template "neo4j.name" . }}
+  name: {{ template "neo4j.secrets.fullname" . }}
   labels:
-    app: app: {{ template "neo4j.name" . }}
+    app: {{ template "neo4j.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: {{ .Release.Service | quote }}
     release: {{ .Release.Name | quote }}
