--- a/incubator/neo4j/values.yaml
+++ b/incubator/neo4j/values.yaml
@@ -47,9 +47,24 @@ core:
     ##
     subPath: ""
 
+    ## Pass extra environment variables to the Neo4j container.
+    ##
+    # extraVars:
+    # - name: EXTRA_VAR_1
+    #   value: extra-var-value-1
+    # - name: EXTRA_VAR_2
+    #   value: extra-var-value-2
+
 # Read Replicas
 readReplica:
   numberOfServers: 0
+  ## Pass extra environment variables to the Neo4j container.
+  ##
+  # extraVars:
+  # - name: EXTRA_VAR_1
+  #   value: extra-var-value-1
+  # - name: EXTRA_VAR_2
+  #   value: extra-var-value-2
 
 resources: {}
 # limits:
