[stable/datadog] Allow multiple agents to collect events
Datadog now has the ability to have multiple agents elect a
single event collector. This depends on having a role that
allows the agents to manage a `datadog-leader-elector` resource,
as described by this document:

https://github.com/DataDog/integrations-core/tree/master/kubernetes

One downside of this is that datadog currently hardcodes the
resource name to be `datadog-leader-elector`.

--- a/stable/datadog/values.yaml
+++ b/stable/datadog/values.yaml
@@ -118,6 +118,14 @@ datadog:
       instances:
         - kube_state_url: http://%%host%%:%%port%%/metrics
 
+          ## Allow agents to elect a leader to collect agents. Requires
+          ## `datadog.collectEvents`, and an RBAC role that allows the
+          ## agents to talk to the API server.
+          ## ref:
+          #https://github.com/DataDog/integrations-core/tree/b7591f2ddec3b28a7eaa9e4d479b03784182d82c/kubernetes#gathering-kubernetes-events
+          ##
+          # leader_candidate: true
+
   ## Provide additonal service definitions
   ## Each key will become a file in /conf.d
   ## ref: https://github.com/DataDog/docker-dd-agent#configuration-files
