--- a/stable/redis-ha/Chart.yaml
+++ b/stable/redis-ha/Chart.yaml
@@ -5,12 +5,12 @@ keywords:
 - redis
 - keyvalue
 - database
-version: 0.2.1
+version: 0.2.3
 description: Highly available Redis cluster with multiple sentinels and standbys.
 icon: https://upload.wikimedia.org/wikipedia/en/thumb/6/6b/Redis_Logo.svg/1200px-Redis_Logo.svg.png
 maintainers:
   - email: ikaboubi@gmail.com
-    name: KABOUBI
+    name: smileisak
 details:
   This package provides a highly available Redis cluster with multiple sentinels and standbys.
   Note the `redis-master` pod is used for bootstrapping only and can be deleted once
