Updates and workarounds, plus added a test.

--- a/stable/weave-scope/charts/weave-scope-agent/templates/clusterrole.yaml
+++ b/stable/weave-scope/charts/weave-scope-agent/templates/clusterrole.yaml
@@ -1,12 +1,13 @@
+{{- if .Values.global.rbac }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
   labels:
-    {{- include "helm_std_labels" . | indent 4 }}
+    {{- include "weave-scope.helm_std_labels" . | indent 4 }}
     component: agent
   name: weave-scope
   annotations:
-    {{- include "scope_annotations" . | indent 4 }}
+    {{- include "weave-scope.annotations" . | indent 4 }}
 rules:
   - apiGroups:
       - '*'
@@ -18,3 +19,4 @@ rules:
       - '*'
     verbs:
       - '*'
+{{- end }}
