--- a/stable/weave-scope/charts/weave-scope-agent/templates/serviceaccount.yaml
+++ b/stable/weave-scope/charts/weave-scope-agent/templates/serviceaccount.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    {{- include "helm_std_labels" . | indent 4 }}
+    {{- include "weave-scope.helm_std_labels" . | indent 4 }}
     component: agent
-  name: {{ .Values.serviceAccount | default "weave-scope" }}
+  name: {{ .Values.serviceAccountName }}
   annotations:
-    {{- include "scope_annotations" . | indent 4 }}
+    {{- include "weave-scope.annotations" . | indent 4 }}
