[stable/heapster]update rbac apiversion to v1.

--- a/stable/heapster/templates/pod-nanny-role.yaml
+++ b/stable/heapster/templates/pod-nanny-role.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.rbac.create -}}
 {{- if .Values.resizer.enabled -}}
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: {{ template "heapster.fullname" . }}-pod-nanny
