--- a/stable/heapster/templates/pod-nanny-rolebinding.yaml
+++ b/stable/heapster/templates/pod-nanny-rolebinding.yaml
@@ -1,6 +1,6 @@
 {{ if .Values.resizer.enabled -}}
 {{- if .Values.rbac.create -}}
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ template "heapster.fullname" . }}-pod-nanny
