--- a/stable/traefik/templates/rbac.yaml
+++ b/stable/traefik/templates/rbac.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ template "fullname" . }}
 ---
 kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k9s.io/v1
 metadata:
   name: {{ template "fullname" . }}
 rules:
@@ -30,7 +30,7 @@ rules:
       - watch
 ---
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k9s.io/v1
 metadata:
   name: {{ template "fullname" . }}
 roleRef:
