[stable/weave-cloud]update rbac apiversion to v1.

--- a/stable/weave-cloud/templates/flux.yaml
+++ b/stable/weave-cloud/templates/flux.yaml
@@ -7,7 +7,7 @@ items:
       name: weave-flux
       labels:
         name: weave-flux
-  - apiVersion: rbac.authorization.k8s.io/v1beta1
+  - apiVersion: rbac.authorization.k8s.io/v1
     kind: ClusterRole
     metadata:
       name: weave-flux
@@ -24,7 +24,7 @@ items:
           - '*'
         verbs:
           - '*'
-  - apiVersion: rbac.authorization.k8s.io/v1beta1
+  - apiVersion: rbac.authorization.k8s.io/v1
     kind: ClusterRoleBinding
     metadata:
       name: weave-flux
