--- a/incubator/elasticsearch-exporter/Chart.yaml
+++ b/incubator/elasticsearch-exporter/Chart.yaml
@@ -2,3 +2,12 @@ apiVersion: v1
 description: Elasticsearch stats exporter for Prometheus
 name: elasticsearch-exporter
 version: 0.1.0
+sources:
+  - https://github.com/justwatchcom/elasticsearch_exporter
+keywords:
+- metrics
+- elasticsearch
+- monitoring
+maintainers:
+  - name: Sven Mueller
+    email: sven.mueller@commercetools.com
