[stable/influxdb] add nodeSelector for influxdb

--- a/stable/influxdb/templates/deployment.yaml
+++ b/stable/influxdb/templates/deployment.yaml
@@ -76,3 +76,7 @@ spec:
       - name: config
         configMap:
           name: {{ template "influxdb.fullname" . }}
+    {{- if .Values.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.nodeSelector | indent 8 }}
+      {{- end -}}
