--- a/stable/influxdb/values.yaml
+++ b/stable/influxdb/values.yaml
@@ -76,7 +76,13 @@ resources:
   limits:
     memory: 16Gi
     cpu: 8
-    
+
+## Node labels for pod assignment
+## Ref: https://kubernetes.io/docs/user-guide/node-selection/
+##
+nodeSelector: {}
+
+
 ## Change InfluxDB configuration paramaters below:
 ## Defaults are indicated
 ## ref: https://docs.influxdata.com/influxdb/v1.1/administration/config/
