--- a/stable/nfs-client-provisioner/templates/storageclass.yaml
+++ b/stable/nfs-client-provisioner/templates/storageclass.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1beta1
 kind: StorageClass
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ .Values.storageclass.name }}
   labels:
     app: {{ template "name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
