aerospike: changing the volumeClaimTemplates to be more general so we can set more parameters. Now using selector we can use multiple admin built disks that is nearer to a production usage of aerospike

--- a/stable/aerospike/templates/statefulset.yaml
+++ b/stable/aerospike/templates/statefulset.yaml
@@ -62,9 +62,5 @@ spec:
   - metadata:
       name: {{ $pv.name | quote }}
     spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName:  {{ $pv.storageClassName | quote }}
-      resources:
-        requests:
-          storage: {{ $pv.storage | quote }}
+{{ toYaml $pv.template | indent 6 }}
   {{- end }}
